fix : fix after merge and rebase with insa/recommendations-traduction